--- a/nextjs/Dockerfile
+++ b/nextjs/Dockerfile
@@ -1,5 +1,7 @@
 # Base image
-FROM node:lts-alpine
+FROM node:lts-alpine as base
+
+FROM base AS deps
 
 # Set the working directory
 WORKDIR /app
@@ -8,14 +10,31 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
+# Expose the necessary port
+EXPOSE 3000
+
+
+FROM base AS dev
+
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
+ENV NEXT_TELEMETRY_DISABLED 1
+
+
+FROM base AS runner
 # Copy application files
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
 # Build the Next.js application
-RUN npm run build
+# RUN npm run build
+
+ENV NEXT_TELEMETRY_DISABLED 1
 
 # Expose the necessary port
 EXPOSE 3000
 
 # Run the Next.js application
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
